# blade

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml  bundle.rs  in_game.rs  magic.rs  main.rs  synthesis.rs
server/src/: bundle.rs  in_game.rs  magic.rs  main.rs  shape_mod.rs  synthesis.rs
src/: animation.rs  bundle.rs  camera.rs  component.rs  end_game.rs  in_game.rs  magic.rs  main.rs  particle.rs  shape_mod.rs  synthesis.rs  ui.rs
wasm/: index.html
