[package]
name = "blade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master", features = ["simd-stable"]}
bevy_prototype_lyon = "0.4.0"
rand = '0.8'
phf = { version = "0.10", features = ["macros"] }
itertools = "0.10"
interpolation = "0.2.0"
